--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
-    "eslint": "^9.19.0",
-    "eslint-config-next": "13.4.19",
     "framer-motion": "^12.0.6",
     "next": "13.4.19",
     "next-auth": "^4.24.11",
@@ -27,5 +25,9 @@
     "react-qr-code": "^2.0.15",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "eslint": "^9.19.0",
+    "eslint-config-next": "^15.1.6"
   }
 }
