attempt to fix deploy issue and rename project

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app-router-auth-using-next-auth",
+  "name": "open-project-club",
   "version": "0.1.0",
   "private": true,
   "scripts": {
