--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prisma": "^6.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.4.0",
     "react-qr-code": "^2.0.15",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
